# loadbalancer

./: docker-compose.yml  down.bat  error_page.html  nginx.conf  pyproject.toml  scale-up.bat
app/: Dockerfile  flask-app.py
