[tool.poetry]
name = "loadbalancer"
version = "0.1.0"
description = "load balancer app"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
